# fs2open.github.com

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml  configure.ac  fs2open.Doxyfile.in  version_override.cmake
.github/workflows/: trigger-build-release.yaml
ci/: bintray.template.json
ci/appveyor/: before_build.ps1  build.ps1  check_release.ps1
ci/travis/: before_install.sh  before_script.sh  check_release.sh  (+3 more)
cmake/: FindTheora.cmake  compilerChecks.cmake  compilers.cmake  cpufeatures.cmake  cpufeatures.cpp  doxygen.cmake  gcc.cmake  generators.cmake  globals.cmake  headers.cmake  msvc.cmake  package.cmake  platform-darwin.cmake  platform-freebsd.cmake  platform-solaris.cmake  platform-unix.cmake  platform-win32.cmake  platforms.cmake  project.h.in  toolchain-apple-clang.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake  toolchain.cmake  unix.cmake  util.cmake  version.cmake  win32.cmake
code/: CMakeLists.txt  Cxx11.cmake  compiler.h.in  configure_code.h.in  default_files.cmake  generated_def_files.h.in  project.h.in  source_groups.cmake
code/ai/: ai_profiles.cpp  aibig.cpp  aicode.cpp  aiturret.cpp
code/asteroid/: asteroid.cpp
code/autopilot/: autopilot.cpp  autopilot.h
code/camera/: camera.cpp
code/cfilearchiver/: CMakeLists.txt
code/cfileextractor/: CMakeLists.txt
code/cmdline/: cmdline.cpp
code/cmeasure/: cmeasure.cpp
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp  presets.cpp  presets.h
code/cutscene/: cutscenes.cpp  oggplayer.cpp
code/debris/: debris.cpp
code/def_files/: ai_profiles.tbl  autopilot.tbl  blur-f.sdr  brightpass-f.sdr  controlconfigdefaults.tbl  def_files-generic.cpp  def_files-win32.cpp  deferred-clear-f.sdr  deferred-clear-v.sdr  deferred-f.sdr  deferred-v.sdr  effect-distort-f.sdr  effect-distort-v.sdr  effect-f.sdr  effect-particle-f.sdr  effect-screen-g.sdr  effect-v.sdr  fonts.tbl  fxaa-f.sdr  game_settings.tbl  iff_defs.tbl  ls-f.sdr  main-f.sdr  main-g.sdr  main-v.sdr  objecttypes.tbl  particle-f.sdr  particle-v.sdr  post-f.sdr  post-v.sdr  post_processing.tbl  species_defs.tbl
code/fireball/: fireballs.cpp
code/gamehelp/: gameplayhelp.cpp
code/globalincs/: alphacolors.cpp  alphacolors.h  def_files-generic.cpp  def_files.cpp  def_files.h  fsmemory.cpp  fsmemory.h  mspdb_callstack.cpp  pstypes.h  scp_defines.h  systemvars.cpp  systemvars.h  version.h
code/graphics/: font.cpp  gropengldraw.cpp  gropenglpostprocessing.cpp  gropenglshader.cpp  gropengltnl.cpp  shadows.cpp
code/hud/: hud.cpp  hudartillery.cpp  hudbrackets.cpp  hudets.cpp  hudlock.cpp  hudmessage.cpp  hudreticle.cpp  hudtarget.cpp  hudtargetbox.cpp
code/iff_defs/: iff_defs.cpp
code/io/: joy-sdl.cpp  keycontrol.cpp
code/jumpnode/: jumpnode.cpp
code/lab/: lab.cpp  wmcgui.cpp
code/math/: fvi.cpp
code/menuui/: barracks.cpp  credits.cpp  fishtank.cpp  mainhallmenu.cpp  mainhalltemp.cpp  optionsmenu.cpp  playermenu.cpp  readyroom.cpp  snazzyui.cpp
code/mission/: missioncampaign.cpp  missiongoals.cpp  missionhotkey.cpp  missionload.cpp  missionparse.cpp
code/missionui/: fictionviewer.cpp  missionbrief.cpp  missionloopbrief.cpp  missionpause.cpp  missionshipchoice.cpp  redalert.cpp
code/mod_table/: mod_table.cpp
code/model/: model.h  modelinterp.cpp  modelread.cpp
code/nebula/: neb.cpp  neblightning.cpp
code/network/: multi.cpp  multi_campaign.cpp  multi_dogfight.cpp  multi_endgame.cpp  multi_ingame.cpp  multi_kick.cpp  multi_obj.cpp  multi_observer.cpp  multi_options.cpp  multi_pinfo.cpp  multi_pxo.cpp  multi_respawn.cpp  multi_voice.cpp  multimsgs.cpp  multiui.cpp  multiutil.cpp  stand_gui.cpp
code/object/: collidedebrisship.cpp  collidedebrisweapon.cpp  collideshipship.cpp  collideshipweapon.cpp  collideweaponweapon.cpp  objcollide.cpp  object.cpp  object.h  objectdock.cpp  objectsnd.cpp  objectsort.cpp
code/observer/: observer.cpp
code/osapi/: osapi.cpp  osapi_unix.cpp  osregistry.cpp  outwnd.cpp
code/parse/: lua.cpp  parselo.cpp  parselo.h  scripting.cpp  sexp.cpp
code/particle/: ParticleSource.cpp  particle.cpp
code/physics/: physics.cpp  physics.h
code/pilotfile/: csg.cpp  plr.cpp
code/playerman/: managepilot.cpp  playercontrol.cpp
code/pngutils/: pngutils.cpp
code/popup/: popup.cpp  popupdead.cpp
code/radar/: radar.cpp  radar.h  radardradis.cpp  radarorb.cpp  radarsetup.cpp
code/scripting/api/libs/: controls.cpp
code/scripting/api/objs/: asteroid.cpp  control_binding.cpp  control_binding.h  graphics.cpp  object.cpp  physics_info.cpp  subsystem.cpp
code/ship/: afterburner.cpp  awacs.cpp  shield.cpp  ship.cpp  shipcontrails.cpp  shipfx.cpp  shiphit.cpp
code/sound/: acm.cpp  acm.h  audiostr.cpp  phrases.cfg  rtvoice.cpp  speech.cpp  voicerec.cpp
code/species_defs/: species_defs.cpp
code/starfield/: starfield.cpp  supernova.cpp
code/stats/: scoring.cpp
code/ui/: slider2.cpp  uidefs.h  window.cpp
code/weapon/: beam.cpp  corkscrew.cpp  emp.cpp  flak.cpp  shockwave.cpp  swarm.cpp  weapons.cpp
code/windows_stub/: config.h
fred2/: CMakeLists.txt  briefingeditordlg.cpp  fred.rc  freddoc.cpp  fredrender.cpp  fredview.cpp  initialstatus.cpp  mainfrm.cpp  management.cpp  missionsave.cpp  orienteditor.cpp  shipeditordlg.cpp  voiceactingmanager.cpp  wing_editor.cpp
freespace2/: CMakeLists.txt  freespace.aps  freespace.cpp  freespace.rc  resources.cmake
freespace2/res/win/: freespace.rc
freespace2/resources/mac/: fixup_bundle.cmake.in
freespace2/resources/win/: freespace.rc  version.rc2
lib/: CMakeLists.txt  luajit.cmake  stlport.cmake
lib/jansson/: CMakeLists.txt
lib/libjpeg/: CMakeLists.txt
lib/libpng/: CMakeLists.txt
lib/libsdl/: CMakeLists.txt
lib/libsdl/lib/x86/: SDL2.lib  SDL2main.lib
lib/lua/: CMakeLists.txt
lib/mac/: CMakeLists.txt
lib/mongoose/: CMakeLists.txt
lib/oggvorbis/: CMakeLists.txt
lib/openal/: CMakeLists.txt
lib/speech/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
tools/: CMakeLists.txt
wxfred2/: CMakeLists.txt  source_groups.cmake
wxfred2/base/: wxFRED_base.cpp
(+13 files in other folders)
