
#IF(APPLE)
	ADD_SUBDIRECTORY(mac)
#ENDIF(APPLE)

ADD_SUBDIRECTORY(libjpeg)

ADD_SUBDIRECTORY(zlib)

ADD_SUBDIRECTORY(libpng)

IF (FSO_USE_LUAJIT)
	INCLUDE(luajit.cmake)
ELSE(FSO_USE_LUAJIT)
	ADD_SUBDIRECTORY(lua)
ENDIF(FSO_USE_LUAJIT)

ADD_SUBDIRECTORY(oggvorbis)

ADD_SUBDIRECTORY(openal)

IF (USE_SPEECH)
	ADD_SUBDIRECTORY(speech)
ENDIF(USE_SPEECH)

# These are only required for the web-ui which is non-Windows
IF(UNIX)
	ADD_SUBDIRECTORY(jansson)

	ADD_SUBDIRECTORY(mongoose)
ENDIF(UNIX)

IF(MSVC60 OR MSVC70)
	INCLUDE(stlport.cmake)
ENDIF(MSVC60 OR MSVC70)
